--- a/client/src/Components/Sidebar/Sidebar.css
+++ b/client/src/Components/Sidebar/Sidebar.css
@@ -1,51 +1,52 @@
 .sidebar{
-    width: 210px;
-    height: 100vh;
     background-color: #141E46;
+    display:flex;
+    flex-direction:column;
+    width: 200px;
+    position: fixed;
+    height: calc(100vh - 50px);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.profilecontainer{
     display:flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-.logocontainer{
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    padding-top: 10px;
-}
-.logo{
-    width:42px;
-    height:32px;
-    margin-right:15px;
-}
-.logoname{
-    color:#D4D4D4;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    letter-spacing: 1px;
-    font-size: 28px;
-}
-.profilecontainer{
-    margin-top:10px;
-    display:flex;
 }
 .icon{
     width:65px;
     height: 65px;
 }
-.profile_name{
+.profile-name{
     color: #D4D4D4;
     display:flex;
     flex-direction: column;
     align-items: center;
-    position: absolute;
-    top:140px;
+    cursor: pointer;
 }
-.sidebarcontainer{
-    margin-top:30px;
-    color:#D4D4D4;
-    list-style: none;
+.sidebarList{
+    display:flex;
+    flex-direction: column;
+    margin-top:10px;
 }
-.sidebarcontainer li{
+.sidebarList a{
     display:flex;
     align-items: center;
+    margin-top:10px;
+    width:200px;
+    height:40px;
+    border-radius: 20px;
+    cursor: pointer;
+    color:#D4D4D4;
+    text-decoration:none;
+}
+.ListIcons{
+    margin: 0px 10px 0px 20px;
+}
+.sidebarList a:first-child{
+    background-color: #D4D4D4;
+    color: #0B0B0B;
+}
+.sidebarList a:hover{
+    background-color: #D4D4D4;
+    color: #0B0B0B;
 }
