--- a/client/src/Components/Sidebar/Sidebar.css
+++ b/client/src/Components/Sidebar/Sidebar.css
@@ -3,9 +3,11 @@
     display:flex;
     flex-direction:column;
     width: 200px;
-    position: fixed;
     height: calc(100vh - 50px);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    scroll-behavior: smooth;
+    position: sticky;
+    top:50px;
 }
 .profilecontainer{
     display:flex;
@@ -49,4 +51,5 @@
 .sidebarList a:hover{
     background-color: #D4D4D4;
     color: #0B0B0B;
+    text-decoration: underline;
 }
