--- a/client/src/Components/Topbar/Topbar.css
+++ b/client/src/Components/Topbar/Topbar.css
@@ -1,11 +1,15 @@
 .Topbar{
     width:100%;
     height: 50px;
+    position: sticky;
+    top:0;
+    z-index: 999;
     -webkit-box-shadow: 0px 4px 4px 4px rgba(0,0,0,0.07); 
     box-shadow: 0px 4px 4px 2px rgba(0,0,0,0.07);
     border-bottom: 1px solid rgb(197, 197, 197);  
     display:flex;
     align-items: center;
+    background-color: white;
     justify-content: space-between;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
