--- a/client/src/Pages/Dashboard/Dashboard.css
+++ b/client/src/Pages/Dashboard/Dashboard.css
@@ -1,3 +1,5 @@
 .dashboard{
-    /* display:flex; */
+    display:flex;
+    width:100%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
