--- a/client/src/Components/Rightbar/Rightbar.css
+++ b/client/src/Components/Rightbar/Rightbar.css
@@ -1,7 +1,68 @@
 .Rightbar-container{
     flex:2.5;
     height:calc(100vh - 50px);
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     -webkit-box-shadow: 4px 4px 4px 4px rgba(0,0,0,0.07); 
     box-shadow: 0px 4px 4px 2px rgba(0,0,0,0.07);
-    border-left: 1px solid rgb(197, 197, 197);  
+    border-left: 1px solid rgb(197, 197, 197);
+    position: sticky;
+    top:50px;
+    overflow-y: scroll;
+}
+.Rightbar-container::-webkit-scrollbar {
+    width: 2px;
+    background: #dadada;
+}
+.Rightbar-container::-webkit-scrollbar-thumb{
+    background: #9F9F9F;
+}
+.searchbar{
+    border-radius: 50px;
+    border: 2px solid #9F9F9F;
+    background-color: #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    display:flex;
+    align-items: center;
+    width:80%;
+    height:30px;
+    margin-top:15px;
+}
+.searchbar .search-icon{
+    width:20px;
+    margin: 0px 5px 0px 10px;
+}
+.searchbar input{
+    background-color: transparent;
+}
+.industries-list{
+    margin-top: 20px;
+    width:100%;
+}
+.industry{
+    display:flex;
+    flex-direction: column;
+    width:100%;
+    height: 75px;
+    position: relative;
+    margin-top:5px;
+    justify-content: center;
+    cursor:pointer;
+}
+.industry h3{
+    margin-left:10px;
+}
+.industry span{
+    font-size: 12px;
+    margin-top: 2px;
+    margin-left: 10px;
+}
+.arrow-icon{
+    position: absolute;
+    right:25px;
+    top:20px;
+}
+.industry:nth-child(odd){
+    background-color: #EEE;
 }
