--- a/client/src/Components/Particular-Industry/industry.css
+++ b/client/src/Components/Particular-Industry/industry.css
@@ -1,7 +1,91 @@
 .industrys{
     display:flex;
+    font-family: 'Gothic',Arial,sans-serif;
 }
 .industry-container{
     width:100%;
     margin:20px 0px 0px 20px;
+}
+.industry-status{
+    display:flex;
+    margin-bottom:32px;
+}
+.industry-status h4{
+    margin-right:80px;
+}
+.industry-status span{
+    color:rgb(3, 186, 3);
+}
+.Industry-main{
+    display:flex;
+}
+.industry-main-left{
+    display:flex;
+    flex:7;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.total-consumption{
+    width: 329px;
+    height: 125px;
+    border-radius: 7px;
+    border: 1.5px solid rgb(180, 180, 180);
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom:35px;
+    justify-content: space-around;
+    -webkit-box-shadow: 8px 8px 7px -7px rgba(0,0,0,0.4); 
+    box-shadow: 8px 8px 7px -7px rgba(0,0,0,0.4);
+}
+.industry-main-right{
+    display:flex;
+    flex:2;
+    width: 195px;
+    height: 290px;
+    border-radius:7px;
+    flex-direction: column;
+    border: 1.5px solid rgb(180, 180, 180);
+    margin-left:20px;
+    margin-right:20px;
+    -webkit-box-shadow: 8px 8px 7px -7px rgba(0,0,0,0.4); 
+    box-shadow: 8px 8px 7px -7px rgba(0,0,0,0.4);
+}
+.industry-main-right h4{
+    background-color: #27374D;
+    text-align: center;
+    border-radius: 7px 7px 0px 0px;
+    justify-content: center;
+    color:white;
+    display:flex;
+}
+.industry-main-right ul{
+    list-style: none;
+}
+.industry-main-right li{
+    display:flex;
+    align-items: center;
+    margin-top:15px;
+}
+.industry-main-right .FlagsIcon{
+    color:rgb(3, 186, 3)
+}
+.consumption-graph{
+    display:flex;
+    justify-content: space-between;
+}
+.calender-buttons button{
+    border:none;
+    font-weight: bold;
+    background-color: white;
+    margin-left:30px;
+    border-radius: 3.5px;
+    width:70px;
+    height:25px;
+    border:1px solid black;
+    cursor:pointer;
+}
+.calender-buttons button:first-child{
+    background-color: #27374D;
+    color:white;
 }
