--- a/client/src/Components/Topbar/Topbar.css
+++ b/client/src/Components/Topbar/Topbar.css
@@ -10,30 +10,14 @@
     display:flex;
     align-items: center;
     background-color: white;
-    justify-content: space-between;
+    justify-content: flex-end;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.TopbarLeft{
-    display:flex;
-    align-items: center;
-    justify-content: center;
-}
-.logo{
-    width:42px;
-    height:32px;
-    margin-right:15px;
-    margin-left:15px;
-}
-.logoname{
-    color:#000000;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    letter-spacing: 1px;
-    font-size: 28px;
-}
+
 .TopbarRight{
     display:flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: flex-end;
 }
 .notification-container{
     display:flex;
@@ -63,9 +47,6 @@
     justify-content: center;
     cursor:pointer
 }
-.userName{
-    margin:0px 5px 0px 5px;
-}
 .profileList{
     display:flex;
     align-items: center;
@@ -84,6 +65,7 @@
     text-align: center;
     justify-content: center;
     text-decoration: none;
+    font-weight: 700;
 }
 .profileList a:hover{
     text-decoration:underline;
