--- a/client/src/Components/Main/main.css
+++ b/client/src/Components/Main/main.css
@@ -4,12 +4,15 @@
     padding-right: 25px;
     padding-top:20px;
 }
+.dashboard-main h3{
+    font-weight: 750;
+}
 .Total-counts{
     display:flex;
     align-items: center;
     justify-content: space-around;
     padding-top:20px;
-    margin-bottom:20px
+    margin-bottom:20px;
 }
 .content-box{
     width: 200px;
@@ -20,9 +23,16 @@
     padding-left: 20px;
     justify-content: space-around;
     position: relative;
+    cursor:pointer;
+    text-decoration: none;
 }
+
 .content-box span{
-    letter-spacing: 1.5px;
+    letter-spacing: 1.2px;
+    color:black;
+    font-weight:700;
+}
+.content-box h1{
     color:#414141;
 }
 .industries{
@@ -93,26 +103,31 @@
     height: 190px;
     display:flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-around;
     padding-top: 5px;
     border-radius: 10px;
     border: 1px solid #BABABA;
     -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.26); 
-    box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.26);  
+    box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.26);
+    cursor: pointer;
+    text-decoration: none;
+    color:black;
 }
 .consumption span{
     font-size: 18px;
-    letter-spacing: 2px;
+    font-weight: 600;
+    margin-left:20px;
+    margin-top:10px;
+    letter-spacing: 1.5px;
 }
 .total-water{
     margin-top:15px;
-    display: flex;
+    margin-left:20px;
 }
 .total-energy{
     margin-top:15px;
-    display: flex;
-    position: relative;
+    margin-left:20px;
 }
 .graph{
     width:280px;
