--- a/client/src/Pages/Manage-Water/manage-water.css
+++ b/client/src/Pages/Manage-Water/manage-water.css
@@ -3,9 +3,12 @@
     width:100%;
     font-family: 'Gothic',Arial,sans-serif;
 }
+.manage-water_container{
+    width:100%;
+}
 .manage-water-container{
     width:100%;
-    margin:20px 0px 0px 20px;
+    margin:15px 0px 0px 15px;
 }
 .Total-WConsumption-container{
     width:100%;
@@ -14,7 +17,7 @@
     justify-content: space-around;
 }
 .Total-WConsumption-box{
-    width:260px;
+    width:250px;
     height:100px;
     box-shadow: 0px 4px 4px 0px rgba(93, 93, 93, 0.25);
     border: 1.5px solid rgba(0, 0, 0, 0.25);
@@ -73,7 +76,7 @@
     margin-top:25px;
 }
 .Tank-list{
-    width:90%;
+    width:100%;
     margin-top: 25px;
 }
 .Tank-list .Tank-header{
@@ -89,7 +92,7 @@
     background-color: #D9D9D9;;
 }
 .WGraph-container{
-    flex:6;
+    flex:6.5;
     margin-top:25px;
 }
 .WGraph-Details{
