--- a/client/src/Pages/Manage-energy/Manage-energy.css
+++ b/client/src/Pages/Manage-energy/Manage-energy.css
@@ -3,6 +3,9 @@
     width:100%;
     font-family: 'Gothic',Arial,sans-serif;
 }
+.Manage-energy_container{
+    width:100%;
+}
 .manage-energy-container{
     margin: 20px 0px 0px 20px;
     width:100%
