--- a/client/src/Components/Main/main.css
+++ b/client/src/Components/Main/main.css
@@ -26,6 +26,9 @@
     cursor:pointer;
     text-decoration: none;
 }
+.content-box:hover{
+    transform: translateY(-5px);
+}
 
 .content-box span{
     letter-spacing: 1.2px;
@@ -39,6 +42,7 @@
     background-color: #87C4FF80;
     border: 1.5px solid rgba(3, 27, 246, 0.25);
     box-shadow: 0px 4px 4px 0px rgba(93, 93, 93, 0.25);
+    
 }
 .Water-storage{
     background-color: #C7E9B0;
@@ -103,7 +107,6 @@
     height: 190px;
     display:flex;
     flex-direction: column;
-    /* align-items: center; */
     justify-content: space-around;
     padding-top: 5px;
     border-radius: 10px;
@@ -113,6 +116,9 @@
     cursor: pointer;
     text-decoration: none;
     color:black;
+    &:hover{
+        transform: translateY(-5px);
+    }
 }
 .consumption span{
     font-size: 18px;
