--- a/client/src/Components/Main/main.css
+++ b/client/src/Components/Main/main.css
@@ -4,9 +4,6 @@
     padding-right: 25px;
     padding-top:20px;
 }
-.dashboard-main h3{
-    font-weight: 750;
-}
 .Total-counts{
     display:flex;
     align-items: center;
@@ -109,6 +106,7 @@
     flex-direction: column;
     justify-content: space-around;
     padding-top: 5px;
+    /* align-items: center; */
     border-radius: 10px;
     border: 1px solid #BABABA;
     -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.26); 
@@ -131,14 +129,29 @@
     margin-top:15px;
     margin-left:20px;
 }
+.counts_container{
+    display:flex;
+    align-items: end;
+}
+.counts_container h1{
+    margin-right:10px;
+}
 .total-energy{
     margin-top:15px;
     margin-left:20px;
 }
 .graph{
-    width:280px;
+    display:flex;
+    width:100%;
+    justify-content: center;
     height: 100px;
 }
 .maps{
     margin-top:20px;
+}
+.custom-tooltip {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 10px;
+    font-size: 14px;
 }
