--- a/client/src/Pages/Manage-Water/manage-water.css
+++ b/client/src/Pages/Manage-Water/manage-water.css
@@ -6,6 +6,13 @@
 .manage-water_container{
     width:100%;
 }
+.Counts{
+    display:flex;
+    align-items: end;
+}
+.Counts h3{
+    margin-left:20px;
+}
 .manage-water-container{
     width:100%;
     margin:15px 0px 0px 15px;
@@ -87,6 +94,7 @@
 .Tank-Body td{
     height: 30px;
     text-align: center;
+    border-bottom: 1px solid #a8a8a8;
 }
 .Tank-Body:nth-child(even){
     background-color: #D9D9D9;;
@@ -94,6 +102,10 @@
 .WGraph-container{
     flex:6.5;
     margin-top:25px;
+    margin-left:15px;
+}
+.WGraph-container h3{
+    margin-bottom: 20px;
 }
 .WGraph-Details{
     display:flex;
