--- a/client/src/Components/Rightbar/Rightbar.css
+++ b/client/src/Components/Rightbar/Rightbar.css
@@ -1,6 +1,6 @@
 .Rightbar-container{
     flex:2.5;
-    height:calc(100vh - 50px);
+    height:100vh;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -8,7 +8,7 @@
     box-shadow: 0px 4px 4px 2px rgba(0,0,0,0.07);
     border-left: 1px solid rgb(197, 197, 197);
     position: sticky;
-    top:50px;
+    top:0px;
     overflow-y: scroll;
 }
 .Rightbar-container::-webkit-scrollbar {
@@ -37,6 +37,10 @@
 .searchbar input{
     background-color: transparent;
     margin-left:15px;
+    border:none;
+    width:65%;
+    height:75%;
+    align-items:center;
 }
 .industries-list{
     margin-top: 20px;
