--- a/client/src/Pages/Home/Home.css
+++ b/client/src/Pages/Home/Home.css
@@ -1,11 +1,101 @@
 .home{
     display:flex;
     width:100%;
-    /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
-}
-.homecontainer{
-    width:100%;
 }
 .home_main{
+    flex:7.5;
+    margin-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-top:1.3rem;
+}
+.totalCounts_container{
     display:flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-top:1.2rem;
+    margin-bottom:1.2rem;
+}
+.totalCounts_container .count-box{
+    width: 25%;
+    height: 5.5rem;
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    padding-left: 1.2rem;
+    justify-content: space-around;
+    position: relative;
+    cursor:pointer;
+    text-decoration: none;
+    box-shadow: 0px 4px 4px 0px rgba(93, 93, 93, 0.25);
+}
+.count-box:hover{
+    transform: translateY(-5px);
+}
+.count-box span{
+    letter-spacing: 1.2px;
+    color:black;
+    font-weight:700;
+}
+.count-box div{
+    position: absolute;
+    right:1rem;
+    bottom :0.6rem;
+    border-radius: 50%;
+    display:flex;
+    width:2rem;
+    height:2rem;
+    align-items: center;
+    justify-content: center;
+}
+.TotalConsumption-container{
+    display:flex;
+    justify-content: space-around;
+    margin: 1.2rem 0rem;
+}
+.TotalConsumption{
+    width: 18.75rem;
+    height: 12rem;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-top: 5px;
+    border-radius: 0.6rem;
+    border: 1px solid #BABABA;
+    -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.26); 
+    box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.26);
+    cursor: pointer;
+    text-decoration: none;
+    color:black;
+    &:hover{
+        transform: translateY(-5px);
+    }
+}
+.TotalConsumption span{
+    font-size: 1rem;
+    font-weight: 600;
+    margin-left:1.2rem;
+    margin-top:0.6rem;
+    letter-spacing: 1.5px;
+}
+.TotalConsumption .counts_container{
+    display:flex;
+    align-items: end;
+}
+.counts_container h1{
+    margin:1rem 0.5rem 0rem 1.25rem;
+}
+.graph{
+    display:flex;
+    width:100%;
+    justify-content: center;
+    height: 6.2rem;
+}
+.maps{
+    margin-top:1.2rem;
+}
+.custom-tooltip {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 0.6rem;
+    font-size: 1rem;
 }
