--- a/client/src/Pages/Industries/Industries.css
+++ b/client/src/Pages/Industries/Industries.css
@@ -8,7 +8,6 @@
     display:flex;
     width:100%;
     flex-direction: column;
-    height:calc(100vh - 100px);
     position:relative;
 }
 .Industries-Top{
@@ -34,6 +33,9 @@
 .Industry-Searchbar input{
     background-color: transparent;
     margin-left: 10px;
+    width:65%;
+    height:75%;
+    border: none;
 }
 .Industry-Searchbar-icon{
     margin-left:40px;
@@ -47,7 +49,7 @@
     border-radius: 5px;
     width: 120px;
     height: 34px;
-    background-color: #143460;
+    background-color:var(--blue);
     color:white;
     display:flex;
     align-items: center;
@@ -64,7 +66,7 @@
     margin:35px;
 }
 .Industries-list .Industries-header{
-    background-color: #143460;
+    background-color: var(--blue);
     color:white;
     height:36px;
 }
@@ -97,7 +99,7 @@
 }
 .Industries-PageBtn span:nth-child(1){
     border-radius: 50%;
-    background-color: #143460;
+    background-color: var(--blue);
     width:24px;
     height:24px;
     color:white;
@@ -107,7 +109,7 @@
 }
 .Industries-PageBtn button{
     color:white;
-    background-color: #143460;
+    background-color: var(--blue);
     border:none;
     width:70px;
     height:25px;
