--- a/client/src/Pages/login/login.css
+++ b/client/src/Pages/login/login.css
@@ -1,78 +1,101 @@
-.login_bckgrnd{
-    background-image: url("../../../public/Assets/login_backgorund.jpg");
+.login_Background{
+    background-image: url("../../../public/Assets/login_background.jpg");
     width:100%;
     height:100vh;
     background-size: cover;
+    background-position: center;
     display:flex;
     align-items:center;
     justify-content:center;
 }
 .login_container{
-    width:400px;
-    height:450px;
+    width:23rem;
+    height:28rem;
     background-color:#FBFBFBBF;
     opacity: 0.85;
-    border-radius:20px;
+    border-radius:1.5rem;
     display:flex;
     flex-direction: column;
     align-items: center;
 }
-.logs{
-    width:140px;
-    height:60px;
-    margin:25px;
+.logos{
+    width:8.75rem;
+    height:3.75;
+    margin:1.5rem;
 }
-.input_container{
+.login_input_container{
     display:flex;
     flex-direction: column;
     align-items: center;
 }
-.mail{
+.login_input_container .mail,
+.login_input_container .password{
     display:flex;
     align-items: center;
     margin:30px;
-    width:300px;
-    height:40px;
+    /* width:18.75rem; */
+    width:100%;
+    height:2.75rem;
     background-color: #f0f0f0;
-    border-radius: 10px;
+    border-radius: 0.75rem;
     border: 1.5px solid #000;
 }
-.icon{
-    margin:18px;
+.login_input_container .icon{
+    margin:1rem;
 }
-input{
+.login_inputField{
     width:65%;
     height:75%;
     outline:none;
     border:none;
     background-color: #f0f0f0;
-    color:#000
+    color:#000;
+    align-items:center
 }
-.password{
+.password span{
     display:flex;
     align-items: center;
-    margin:30px;
-    width:300px;
-    height:40px;
-    background-color: #f0f0f0;
-    border-radius: 10px;
-    border: 1.5px solid #000;   
 }
-.forgotpass{
+.forgotPass{
     color: #ff0000;
-    font-size: 16px;
+    font-size: 1rem;
     text-decoration-line: underline;
-    width:300px; 
+    width:18.75rem; 
     cursor:pointer;
 }
-.button{
-    width: 100px;
-    height:35px;
-    border-radius: 8px;
-    background-color: #143460;
+.login_container .login_Button{
+    width: 6.25rem;
+    height:2.4rem;
+    border-radius: 0.5rem;
+    background-color: var(--blue);
     color:white;
-    margin:30px;
-    font-size:18px;
-    border:1.5px solid black;
+    margin:2rem;
+    font-size:1.2rem;
+    border:none;
     cursor:pointer;
+}
+@media screen and (max-width:800px){
+    .login_Background{
+        background-image: url("../../../public/Assets/login_background.jpg");
+        width:100%;
+        height:100vh;
+    }
+    .login_container{
+        width:75%;
+        height:auto;
+    }
+    .login_input_container .mail,
+    .login_input_container .password{
+        width:80%;
+    }
+    .forgotPass,
+    .login_container .login_Button {
+        width: 80%; 
+        margin: 1rem;
+    }
+    .password span{
+        display:flex;
+        align-items: center;
+        margin-right:0.75rem;
+    }
 }
