--- a/client/src/Components/Add industry/Addindustry.css
+++ b/client/src/Components/Add industry/Addindustry.css
@@ -1,9 +1,9 @@
 .add_industry{
     display:flex;
+    width:100%;
+    height:100vh;
     align-items: center;
     justify-content: center;
-    /* background-color: rgb(78, 78, 78); */
-    /* opacity: 0.5; */
 }
 .add_industry_container{
     display: flex;
@@ -14,7 +14,6 @@
     width:30%;
     height:460px;
     background-color: rgb(255, 255, 255);
-    /* background-color: #27374D; */
 }
 .icons_container{
     width:100%;
