--- a/client/src/Components/Rightbar/Rightbar.css
+++ b/client/src/Components/Rightbar/Rightbar.css
@@ -26,24 +26,48 @@
     display:flex;
     align-items: center;
     width:80%;
-    height:30px;
-    margin-top:15px;
+    height:2rem;
+    margin-top:1rem;
 }
 .searchbar .search-icon{
     width:18px;
-    margin: 0px 5px 0px 15px;
+    margin: 0 0.3rem 0 1rem;
     cursor:pointer;
 }
 .searchbar input{
     background-color: transparent;
-    margin-left:15px;
+    margin-left:1rem;
     border:none;
     width:65%;
     height:75%;
     align-items:center;
 }
+.total-industries{
+    margin-top:0.8rem;
+    display:flex;
+    width:100%;
+    justify-content: space-around;
+}
+.total-industries p{
+    font-weight: bold;
+    font-size: small;
+    display:flex;
+    align-items: center;
+    cursor:pointer;
+}
+.industry-sort{
+    margin-top:1rem;
+    display:flex;
+    align-items: center;
+    justify-content: space-around;
+    width:100%;
+}
+.industry-sort p{
+    display:flex;
+    align-items: center;
+}
 .industries-list{
-    margin-top: 20px;
+    margin-top: 0.5rem;
     width:100%;
     display:flex;
     flex-direction: column;
@@ -59,6 +83,11 @@
     margin-top:5px;
     justify-content: center;
     cursor:pointer;
+    color:black;
+    text-decoration: none;
+}
+.industry:hover{
+    transform: translateY(-5px);
 }
 .industry h3{
     margin-left:10px;
